x11-backend: Add output hotplug support
A small playground, not intended for upstream, yet
really useful for testing.

Signed-off-by: Armin Krezović <krezovic.armin@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -80,6 +80,7 @@ libweston_la_SOURCES =					\
 	src/compositor-rdp.h				\
 	src/compositor-wayland.h			\
 	src/compositor-x11.h				\
+	src/compositor-x11-private.h			\
 	src/input.c					\
 	src/data-device.c				\
 	src/screenshooter.c				\
@@ -281,7 +282,19 @@ x11_backend_la_CFLAGS =				\
 x11_backend_la_SOURCES = 			\
 	src/compositor-x11.c			\
 	src/compositor-x11.h			\
+	src/compositor-x11-private.h		\
 	shared/helpers.h
+
+module_LTLIBRARIES += x11-hotplug.la
+
+x11_hotplug_la_LDFLAGS = -module -avoid-version
+
+x11_hotplug_la_CFLAGS =				\
+	$(COMPOSITOR_CFLAGS)			\
+	$(AM_CFLAGS)
+
+x11_hotplug_la_SOURCES = 			\
+	src/x11-hotplug.c
 endif
 
 INPUT_BACKEND_LIBS = $(LIBINPUT_BACKEND_LIBS)
