compositor-headless: Make it possible to create outputs from other modules
This exposes additional functionality to make it possible to
create a virtual output outside of headless backend.

Since it's intended to be used for testing only, a new module
which includes the mentioned functionality has been introduced
while the current module remains untouched.

Signed-off-by: Armin Krezović <krezovic.armin@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -370,6 +370,17 @@ headless_backend_la_SOURCES = 			\
 	libweston/compositor-headless.h		\
 	libweston/compositor-headless-private.h	\
 	shared/helpers.h
+
+noinst_LTLIBRARIES += headless-testing-backend.la
+headless_testing_backend_la_LDFLAGS = -module -avoid-version
+headless_testing_backend_la_LIBADD = $(COMPOSITOR_LIBS) libshared.la
+headless_testing_backend_la_CPPFLAGS = -DTESTING_MODULE $(AM_CPPFLAGS)
+headless_testing_backend_la_CFLAGS = $(COMPOSITOR_CFLAGS) $(AM_CFLAGS)
+headless_testing_backend_la_SOURCES = 		\
+	libweston/compositor-headless.c		\
+	libweston/compositor-headless.h		\
+	libweston/compositor-headless-private.h	\
+	shared/helpers.h
 endif
 
 if ENABLE_FBDEV_COMPOSITOR
